--- a/styles.css
+++ b/styles.css
@@ -148,7 +148,7 @@ p{
 
 .vlog-name{
     font-size: 1rem;
-    margin-left: 23vh;
+    margin-left: 190px;
     margin-top: -18px;
 }
 
@@ -314,3 +314,5 @@ footer {
 }
 
 /* Form Last CSS */
+
+
